tests/errors/sem10.kt
fun main(){
    val y = 1
    val y = 2
}